# optional

./: .gitignore  CMakeLists.txt  README.md  deps
optional/include/optional/: error_or_value.h  optional.h
tests/: CMakeLists.txt
tests/src/: error_or_value.cpp  main.cpp  optional.cpp
